<resources>
    <string name="app_name">Shopping List</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_group">Create Group</string>
    <string name="join_group">Join Group</string>
    <string name="invite_code">Invite Code</string>
    <string name="add_item">Add Item</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="duplicate_item_title">Duplicate Item</string>
    <string name="duplicate_item_msg">This product already exists. Do you want to increase the quantity instead?</string>
    <string name="increase_quantity">Increase Quantity</string>
    <string name="empty_list">No items yet. Add some!</string>
    <string name="mark_bought">Mark as Bought</string>
    <string name="delete">Delete</string>
    <string name="logout">Logout</string>
    <string name="edit_item">Edit Item</string>
    <string name="added_by">Added by: %1$s</string>
</resources>
